# RyotenkAI

./: .dockerignore  .env.example  .env.stack  .gitignore  .mutation-hotspots.yml  .pre-commit-config.yaml  .venv  CONTRIBUTING.md  LICENSE  Makefile  README.md  cosmic-ray.toml  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  run.sh  setup.sh
.claude/: .mcp.json  CLAUDE.md  launch.json
.github/workflows/: chaos-deep.yml  chaos-nightly.yml  e2e.yml  legacy-tests.yml  lint.yml  load.yml  mutation-flip-check.yml  mutation-nightly.yml  mutation-pr.yml  nightly.yml  presubmit-blocking.yml  presubmit-fast.yml  quarterly-review.yml  release-gate.yml  visual-regression.yml
community/: README.md  conftest.py
community/evaluation/: README.md
community/libs/: README.md
community/presets/: README.md
community/reports/: README.md
community/reward/: README.md
community/validation/: README.md
configs/presets/: 01-small.yaml  02-medium.yaml  03-large.yaml  qlora-7b-runpod.yaml  single-node-smoke.yaml
docker/inference/: Dockerfile  README.md  build_and_push.sh  entrypoint.sh
docker/mlflow/: .dockerignore  .env.mlflow  Caddyfile  Dockerfile.mlflow  README.md  docker-compose.mlflow.yml  entrypoint.mlflow.sh  expose-tailscale.sh  start.sh
docker/training/: Dockerfile.runtime  README.md  build_and_push.sh  entrypoint.sh  requirements.runtime.txt  runtime_check.py
docs/: runner-architecture.md  tui_layering_followup_plan.md  web-ui.md
docs/adrs/: 2026-05-03-monorepo-uv-workspace-packagization.md  2026-05-10-greenfield-testing-architecture.md  2026-05-11-legacy-test-decommissioning.md  2026-05-17-unified-event-system.md
docs/architecture/: SSH_SURFACE.md  core-vs-project-boundaries.md  event-mirror.md  log-collection.md  thin-image.md
docs/codestyle/: CLI_ARCHITECTURE.md  CODE_COMMUNITY.md  CODE_ERRORS.md  CODE_EVENTS.md  CODE_MLFLOW.md
docs/i18n/: README.es.md  README.he.md  README.ja.md  README.ko.md  README.ru.md  README.zh-CN.md
docs/migration/: architecture_audit_report.md  batch_1_log.md  batch_2_log.md  batch_3_log.md  batch_4_log.md  batch_5_log.md  batch_6a_log.md  batch_6b_log.md  batch_7a_log.md  batch_7b_log.md  batch_7c_log.md  final_fix_report.md  infrastructure_audit_report.md  mock_inventory.csv  mock_inventory.md  mutation_testing_report.md  phase_2a_log.md  phase_2b_log.md  phase_3a_log.md  phase_3b_log.md  phase_4_followup_log.md  phase_4a_log.md  phase_4bc_log.md  remediation_3_log.md  xfail_audit_report.md  xfail_debt.md
docs/plans/: 2026-05-01-22-20-02-stage-execution-loop-polymorphic-token.md  2026-05-02-fail-fast-prevention-and-log-visibility.md  2026-05-02-monitor-cleanup-and-control-plane-redesign.md  2026-05-03-monorepo-uv-workspace-packagization.md  2026-05-03-transport-unification-http-only-runtime.md  2026-05-04-transport-unification-http-runtime-v2.md  adr-updates-pending.md  async-floating-frost.md  b-hazy-phoenix.md  concurrent-gathering-hippo.md  cozy-booping-walrus.md  dataset-versioning-notes.md  ethereal-tumbling-patterson-agent-a72fe1ca43f916e2b.md  ethereal-tumbling-patterson.md  frolicking-watching-iverson.md  giggly-hopping-deer.md  gleaming-splashing-karp.md  harmonic-rolling-crayon.md  humble-frolicking-acorn.md  jolly-baking-bird.md  lexical-whistling-pebble.md  lovely-juggling-hamster.md  luminous-tickling-haven.md  mock-elimination-architecture.md  nice-jepsen-runner.md  nimble-charting-fox.md  orchestrator-decomposition-analysis.md  parallel-snacking-quilt.md  phase-12-metrics-durability.md  phase-14a-provider-abstraction.md  phase-14b-pod-terminator-extraction.md  phase-14c-launch-resume-unification.md  phase-14df-provider-leak-elimination.md  phase-14e-srp-soc-fixes.md  plugin-system-analysis.md  purring-sleeping-hartmanis.md  quizzical-splashing-graham.md  robust-rolling-dolphin.md  serialized-tinkering-piglet.md  sharded-stargazing-wigderson.md  (+9 more)
docs/resilient-pipeline/: questions.md
docs/testing/: README.md  STATUS.md  mock_policy.md  mutation_testing.md
examples/quickstart-qlora-sft/: README.md  pipeline_config.yaml
i18n/: README.es.md  README.he.md  README.ja.md  README.ko.md  README.ru.md  README.zh-CN.md
scripts/: __init__.py  batch_smoke.py  codemod_mappings.txt  codemod_phase_b5.py  legacy_test_audit.py  migrate_config_to_discriminated_unions.py  mock_inventory.py  phase0_smoke_event_envelope.py  run_mutation_testing.sh  sync_openapi.py
scripts/audit/: asyncmock_usage.py
scripts/codemods/: __init__.py  apply_with_revert.py  magicmock_to_simplenamespace.py  patchdict_environ_to_monkeypatch.py
scripts/lint/: mlflow_rules.py
scripts/mutation/: check_ratchet.py  maybe_flip_to_blocking.py  orchestrate.py  ratchet_baseline.json  run_full.sh  run_on_diff.sh  validate_agent_output.sh
scripts/testing/: status.py
src/: __init__.py  constants.py  main.py
src/api/: __init__.py  config.py  dependencies.py  main.py  openapi_dump.py
src/cli/: __init__.py  _smoke_runner.py  common_options.py  community.py  context.py  errors.py  formatters.py  plugin_scaffold.py  renderer.py  run_rendering.py  style.py  version.py
src/cli_state/: __init__.py  context_store.py
src/community/: __init__.py  archive.py  catalog.py  constants.py  inference.py  install.py  instance_validator.py  libs.py  loader.py  manifest.py  pack.py  preflight.py  registry_base.py  scaffold.py  scaffold_template.py  stale_plugins.py  sync.py  toml_writer.py  validate_manifest.py
src/config/: CONFIG_REFERENCE.md  __init__.py  base.py  pipeline_config.yaml  runtime.py
src/data/: __init__.py
src/evaluation/: __init__.py  runner.py  system_prompt.py
src/inference/: __about__.py
src/pipeline/: __init__.py  _types.py  _workspace_registry.py  cancellation.py  constants.py  deletion.py  (+11 more)
tests/: README.md  __init__.py  conftest.py  pytest.ini
web/: .gitignore  FRONTEND_GUIDELINES.md  LIGHTHOUSE_BUDGETS.md  README.md  index.html  lighthouserc.json  lost-pixel.config.ts  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
(+1832 files in other folders)
