[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ryotenkai"
version = "1.0.0"
description = "Declarative, multi-phase LLM fine-tuning pipeline with plugin architecture"
authors = [{ name = "Golikov Daniil", email = "daniil.golikoff@gmail.com" }]
dependencies = [
    "torch>=2.5.0",
    "transformers>=4.46.0,<5.0.0",
    "peft>=0.13.0,<1.0.0",
    "accelerate>=1.0.0",
    "bitsandbytes>=0.42.0; sys_platform != 'darwin'",
    "sentencepiece>=0.2.0",
    "datasets>=4.4.1",
    "dvc>=3.58.0,<4.0.0",
    "prefect>=3.1.0,<4.0.0",
    "runpod>=1.7.0,<2.0.0",
    "huggingface-hub>=0.26.0,<1.0.0",
    "pydantic>=2.10.0,<3.0.0",
    "pydantic-settings>=2.6.0,<3.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "pyyaml>=6.0.0,<7.0.0",
    "requests>=2.32.0,<3.0.0",
    "rich>=14.2.0,<15.0.0",
    "textual[syntax]>=8.1.0,<9.0.0",
    "loguru>=0.7.0,<1.0.0",
    "dill>=0.4.0",
    "colorlog>=6.9.0",
    "mlflow>=3.8.1,<4.0.0",
    "pynvml>=11.5.0",
    "typer>=0.12.0",
    "pandas>=2.2.0",
    "scipy>=1.13.0",
    "scikit-learn>=1.5.0",
    "protobuf>=5.28.0",
    "tensorboard>=2.18.0",
    "paramiko>=3.5.0",
    "trl>=0.12.0",
    "pytest>=8.3.0",
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.32.0,<1.0.0",
    "websockets>=13.0.0,<14.0.0",
]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Framework :: Pytest",
    "Framework :: Pydantic",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0,<9.0.0",
    "pytest-cov>=6.0.0,<7.0.0",
    "pytest-mock>=3.14.0,<4.0.0",
    "pytest-asyncio>=0.24.0,<1.0.0",
    "black>=24.10.0,<25.0.0",
    "ruff>=0.8.0,<1.0.0",
    "mypy>=1.13.0,<2.0.0",
    "pyright>=1.1.350",
    "pre-commit>=4.0.0,<5.0.0",
    "bandit[toml]>=1.8.0,<2.0.0",
    "ipython>=8.30.0",
    "jupyter>=1.1.0",
    "jupyterlab>=4.3.0",
]

# Treat ``src`` as a regular package (not as an sr-layout root). The codebase
# imports everything via ``from src.xxx import …`` and the ``ryotenkai``
# entry point resolves to ``src.main:app`` — both require ``src`` to be a
# top-level package visible on ``sys.path`` via its **parent** directory.
[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
namespaces = false

[project.scripts]
ryotenkai = "src.main:app"

[project.urls]
Homepage = "https://github.com/DanilGolikov/ryotenkai"
Repository = "https://github.com/DanilGolikov/ryotenkai"
Issues = "https://github.com/DanilGolikov/ryotenkai/issues"

# ============================================
# Ruff Configuration (Fast Python Linter)
# ============================================
[tool.ruff]
# Enable all rules by default, then disable specific ones
target-version = "py312"
line-length = 120
indent-width = 4

# Exclude generated files, caches, etc.
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "scripts",
    "venv",
]

[tool.ruff.lint]
# Enable rules:
# E: pycodestyle errors
# F: pyflakes
# I: isort (import sorting)
# N: pep8-naming
# W: pycodestyle warnings
# UP: pyupgrade (modern Python syntax)
# B: flake8-bugbear (common bugs)
# C4: flake8-comprehensions
# SIM: flake8-simplify
# TCH: flake8-type-checking
# ARG: flake8-unused-arguments
# PTH: flake8-use-pathlib
# RUF: Ruff-specific rules
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "W",    # pycodestyle warnings
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "ARG",  # flake8-unused-arguments
    "PTH",  # flake8-use-pathlib
    "RUF",  # Ruff-specific rules
]

# Ignore specific rules
ignore = [
    "E501",   # Line too long (handled by black)
    "B008",   # Do not perform function calls in argument defaults
    "B904",   # Use raise from within except
    "N812",   # Lowercase imported as non-lowercase
    "SIM108", # Use ternary operator (sometimes less readable)
    "RUF001", # Ambiguous unicode
    "RUF002", # Ambiguous unicode in docstrings
    "RUF003", # Ambiguous unicode in comments
]

# Allow autofix for all enabled rules (when `--fix` is provided)
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# External lint codes (from flake8/wemake-python-styleguide) — don't remove their noqa comments
external = ["WPS", "DAR"]

[tool.ruff.lint.per-file-ignores]
# Ignore specific rules in specific files
"__init__.py" = ["F401"]  # Unused imports in __init__.py
"tests/**/*.py" = [
    "ARG001",  # Unused function argument
    "ARG002",  # Unused method argument
    "S101",    # Use of assert
    "RUF012",  # Mutable class attributes (test classes)
]
"src/tests/**/*.py" = [
    "ARG001",  # Unused function argument
    "ARG002",  # Unused method argument
    "S101",    # Use of assert
    "RUF012",  # Mutable class attributes (test classes)
]
"**/test_*.py" = [
    "ARG001",  # Unused function argument (fixtures used for side effects)
    "ARG002",  # Unused method argument (pytest fixtures)
    "S101",    # Use of assert
    "RUF012",  # Mutable class attributes (test classes)
    "TC003",   # Runtime-needed typing imports (pytest fixture annotations)
]
# Third-party plugins under community/ may legitimately use `Path` at runtime
# for __file__-relative resource access, so skip TC003 there too.
"community/**/*.py" = ["TC003"]
# Loader/catalog use Path both as default arg value and as annotation.
# inference.py also imports PluginKind for a runtime-visible annotation.
"src/community/**/*.py" = ["TC001", "TC003"]
# CLI module uses Path at runtime for typer defaults.
"src/cli/community.py" = ["TC003"]

[tool.ruff.format]
# Use Black-compatible formatting
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
# isort configuration
known-first-party = ["src"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.lint.mccabe]
# Maximum complexity
max-complexity = 10

# ============================================
# Black Configuration (Code Formatter)
# ============================================
[tool.black]
line-length = 120
target-version = ['py312', 'py313']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.ruff_cache
  | \.venv
  | __pycache__
  | build
  | dist
)/
'''

# ============================================
# MyPy Configuration (Type Checking)
# ============================================
[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]

# GRADUAL ADOPTION STRATEGY:
# Start with relaxed mode, then incrementally enable strict checks
warn_return_any = false  # ⚠️ RELAXED: Will enable later
warn_unused_configs = true
disallow_untyped_defs = false  # ⚠️ RELAXED: Will enable per-module
disallow_incomplete_defs = false  # ⚠️ RELAXED: Will enable per-module
check_untyped_defs = true  # ✅ ENABLED: Check even untyped functions
disallow_untyped_decorators = false
no_implicit_optional = true  # ✅ ENABLED: Catch None bugs
warn_redundant_casts = true
warn_unused_ignores = false  # ⚠️ RELAXED: Avoid noise during migration
warn_no_return = true
warn_unreachable = true
strict_equality = true  # ✅ ENABLED: Catch == None bugs
show_error_codes = true  # ✅ ENABLED: Show error codes

# Import handling
ignore_missing_imports = true  # Allow third-party libs without stubs
follow_imports = "normal"

# Output
pretty = true
show_column_numbers = true
show_error_context = true

# Performance
cache_dir = ".mypy_cache"
incremental = true

# Per-module options
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
ignore_errors = false

[[tool.mypy.overrides]]
module = "transformers.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "peft.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "datasets.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "runpod.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "trl.*"
ignore_missing_imports = true

# TODO: Incrementally enable strict mode for new/fixed modules
# [[tool.mypy.overrides]]
# module = "src.some_fixed_module.*"
# disallow_untyped_defs = true
# disallow_incomplete_defs = true

# ============================================
# Pytest Configuration
# ============================================
[tool.pytest.ini_options]
testpaths = ["src"]
python_files = ["test_*.py"]
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "requires_gpu: marks tests that require GPU",
    "requires_internet: marks tests that require internet connection",
    "requires_external_data: marks tests that require external data repository",
]

# ============================================
# Coverage Configuration
# ============================================
[tool.coverage.run]
data_file = "src/tests/coverage/.coverage"
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

# ============================================
# Bandit Configuration (Security Linter)
# ============================================
[tool.bandit]
exclude_dirs = ["tests", ".venv", "venv"]
skips = ["B101"]  # Skip assert_used in tests
