[project]
name = "ryotenkai-monorepo"
version = "1.0.0"
description = "RyotenkAI monorepo — uv workspace root for the 5 ryotenkai-* packages"
authors = [{ name = "Golikov Daniil", email = "daniil.golikoff@gmail.com" }]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }
# All runtime deps live in their respective workspace member's pyproject.toml
# (packages/<member>/pyproject.toml). This root project carries only the
# workspace declaration plus the dev tooling group.
dependencies = [
    "ryotenkai-shared",
    "ryotenkai-community",
    "ryotenkai-pod",
    "ryotenkai-providers",
    "ryotenkai-control",
    "ryotenkai-engines",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0,<9.0.0",
    "pytest-cov>=6.0.0,<7.0.0",
    "pytest-mock>=3.14.0,<4.0.0",
    "pytest-asyncio>=0.24.0,<1.0.0",
    "black>=24.10.0,<25.0.0",
    "ruff>=0.8.0,<1.0.0",
    "mypy>=1.13.0,<2.0.0",
    "pyright>=1.1.350",
    "pre-commit>=4.0.0,<5.0.0",
    "bandit[toml]>=1.8.0,<2.0.0",
    "import-linter>=2.0",
    "ipython>=8.30.0",
    "jupyter>=1.1.0",
    "jupyterlab>=4.3.0",
    # Mutation testing (tiers 1-4 of docs/testing/mutation_testing.md).
    "cosmic-ray>=8.4.6,<9.0.0",
    # Snapshot testing (tests/golden/ conftest).
    "syrupy>=5.0.0,<6.0.0",
    # Property-based testing (tests/conftest.py imports hypothesis).
    "hypothesis>=6.0.0,<7.0.0",
]

# ============================================
# uv Workspace Declaration
# ============================================
[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
ryotenkai-shared    = { workspace = true }
ryotenkai-community = { workspace = true }
ryotenkai-pod       = { workspace = true }
ryotenkai-providers = { workspace = true }
ryotenkai-control   = { workspace = true }
ryotenkai-engines   = { workspace = true }

[project.urls]
Homepage = "https://github.com/DanilGolikov/ryotenkai"
Repository = "https://github.com/DanilGolikov/ryotenkai"
Issues = "https://github.com/DanilGolikov/ryotenkai/issues"

# ============================================
# Ruff Configuration (Fast Python Linter)
# ============================================
[tool.ruff]
# Enable all rules by default, then disable specific ones
target-version = "py312"
line-length = 120
indent-width = 4

# Exclude generated files, caches, etc.
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "scripts",
    "venv",
]

[tool.ruff.lint]
# Enable rules:
# E: pycodestyle errors
# F: pyflakes
# I: isort (import sorting)
# N: pep8-naming
# W: pycodestyle warnings
# UP: pyupgrade (modern Python syntax)
# B: flake8-bugbear (common bugs)
# C4: flake8-comprehensions
# SIM: flake8-simplify
# TCH: flake8-type-checking
# ARG: flake8-unused-arguments
# PTH: flake8-use-pathlib
# RUF: Ruff-specific rules
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "W",    # pycodestyle warnings
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "ARG",  # flake8-unused-arguments
    "PTH",  # flake8-use-pathlib
    "RUF",  # Ruff-specific rules
]

# Ignore specific rules
ignore = [
    "E501",   # Line too long (handled by black)
    "B008",   # Do not perform function calls in argument defaults
    "B904",   # Use raise from within except
    "N812",   # Lowercase imported as non-lowercase
    "SIM108", # Use ternary operator (sometimes less readable)
    "RUF001", # Ambiguous unicode
    "RUF002", # Ambiguous unicode in docstrings
    "RUF003", # Ambiguous unicode in comments
]

# Allow autofix for all enabled rules (when `--fix` is provided)
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# External lint codes (from flake8/wemake-python-styleguide) — don't remove their noqa comments
external = ["WPS", "DAR"]

[tool.ruff.lint.per-file-ignores]
# Ignore specific rules in specific files
"__init__.py" = ["F401"]  # Unused imports in __init__.py
"tests/**/*.py" = [
    "ARG001",  # Unused function argument
    "ARG002",  # Unused method argument
    "S101",    # Use of assert
    "RUF012",  # Mutable class attributes (test classes)
]
"packages/*/tests/**/*.py" = [
    "ARG001",  # Unused function argument
    "ARG002",  # Unused method argument
    "S101",    # Use of assert
    "RUF012",  # Mutable class attributes (test classes)
]
"**/test_*.py" = [
    "ARG001",  # Unused function argument (fixtures used for side effects)
    "ARG002",  # Unused method argument (pytest fixtures)
    "S101",    # Use of assert
    "RUF012",  # Mutable class attributes (test classes)
    "TC003",   # Runtime-needed typing imports (pytest fixture annotations)
]
# Third-party plugins under community/ may legitimately use `Path` at runtime
# for __file__-relative resource access, so skip TC003 there too.
"community/**/*.py" = ["TC003"]
# Loader/catalog use Path both as default arg value and as annotation.
# inference.py also imports PluginKind for a runtime-visible annotation.
"packages/community/src/ryotenkai_community/**/*.py" = ["TC001", "TC003"]
# CLI modules use Path / typer / Protocol types at runtime for typer
# defaults, renderer method signatures, and Console instantiation.
"packages/control/src/ryotenkai_control/cli/**/*.py" = ["TC001", "TC002", "TC003"]

[tool.ruff.format]
# Use Black-compatible formatting
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
# isort configuration
known-first-party = ["ryotenkai_shared", "ryotenkai_community", "ryotenkai_pod", "ryotenkai_providers", "ryotenkai_control"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.lint.mccabe]
# Maximum complexity
max-complexity = 10

# ============================================
# Black Configuration (Code Formatter)
# ============================================
[tool.black]
line-length = 120
target-version = ['py312', 'py313']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.ruff_cache
  | \.venv
  | __pycache__
  | build
  | dist
)/
'''

# ============================================
# MyPy Configuration (Type Checking)
# ============================================
[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]

# GRADUAL ADOPTION STRATEGY:
# Start with relaxed mode, then incrementally enable strict checks
warn_return_any = false  # ⚠️ RELAXED: Will enable later
warn_unused_configs = true
disallow_untyped_defs = false  # ⚠️ RELAXED: Will enable per-module
disallow_incomplete_defs = false  # ⚠️ RELAXED: Will enable per-module
check_untyped_defs = true  # ✅ ENABLED: Check even untyped functions
disallow_untyped_decorators = false
no_implicit_optional = true  # ✅ ENABLED: Catch None bugs
warn_redundant_casts = true
warn_unused_ignores = false  # ⚠️ RELAXED: Avoid noise during migration
warn_no_return = true
warn_unreachable = true
strict_equality = true  # ✅ ENABLED: Catch == None bugs
show_error_codes = true  # ✅ ENABLED: Show error codes

# Import handling
ignore_missing_imports = true  # Allow third-party libs without stubs
follow_imports = "normal"

# Output
pretty = true
show_column_numbers = true
show_error_context = true

# Performance
cache_dir = ".mypy_cache"
incremental = true

# Per-module options
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
ignore_errors = false

[[tool.mypy.overrides]]
module = "transformers.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "peft.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "datasets.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "runpod.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "trl.*"
ignore_missing_imports = true

# TODO: Incrementally enable strict mode for new/fixed modules
# [[tool.mypy.overrides]]
# module = "src.some_fixed_module.*"
# disallow_untyped_defs = true
# disallow_incomplete_defs = true

# ============================================
# Pytest Configuration
# ============================================
[tool.pytest.ini_options]
testpaths = ["packages"]
python_files = ["test_*.py"]
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "requires_gpu: marks tests that require GPU",
    "requires_internet: marks tests that require internet connection",
    "requires_external_data: marks tests that require external data repository",
]

# ============================================
# Coverage Configuration
# ============================================
[tool.coverage.run]
data_file = "tests/coverage/.coverage"
source = ["packages"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
# Coverage gate: pytest-cov fails the run if total coverage drops below this
# threshold. Baseline measured 2026-04-26 = 85.35 % (4939 passed / 9 failed
# pre-existing / 121 skipped). Floor(baseline - 2 %) = 83 — leaves a 2 pp
# buffer for harmless noise. Bump in a separate PR after a stable green
# stretch; do not pre-emptively raise it.
#
# Per-package gate (plan §7): not enforced today. The packagization PR keeps
# the single workspace-wide floor because per-package measurement currently
# trips on ~30 pre-existing shared test failures that are orthogonal to the
# layout split (config schema drift, contract tests for the job client). The
# follow-up flow is:
#   1. Land the shared test fixes (separate PR).
#   2. Run ``pytest packages/<pkg>/tests --cov=ryotenkai_<pkg>`` for each
#      package once green; record baselines.
#   3. Add ``[tool.coverage.report.<pkg>] fail_under = baseline - 2`` blocks
#      here, OR move the per-package floors into each package's pyproject.toml
#      once uv-workspace member overrides land (open uv issue tracked).
fail_under = 83
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

# ============================================
# Bandit Configuration (Security Linter)
# ============================================
[tool.bandit]
exclude_dirs = ["tests", ".venv", "venv"]
skips = ["B101"]  # Skip assert_used in tests

# ============================================
# import-linter — graph-shape enforcement for the 5-package layout
# ============================================
# Defends the architectural boundaries documented in
# ``docs/plans/2026-05-03-monorepo-uv-workspace-packagization.md`` §3.2:
#
#                shared (leaf)
#                  │
#               community
#              /     |     \
#         control  pod   providers
#
# What's enforced (each contract is a "forbidden" import direction):
#   - shared has no internal deps (it's the leaf).
#   - community depends only on shared.
#   - pod depends only on shared + community.
#   - providers depends only on shared (NOT community, NOT pod, NOT control).
#   - control may depend on shared + community + providers, NOT on pod.
#   - inside the pod package: runner subpkg ↔ trainer subpkg are forbidden
#     (runner spawns trainer via subprocess, never imports it).
#
# Run with: ``uv run lint-imports``
[tool.importlinter]
root_packages = [
    "ryotenkai_shared",
    "ryotenkai_community",
    "ryotenkai_pod",
    "ryotenkai_providers",
    "ryotenkai_control",
    "ryotenkai_engines",
]
# Phase 3 PR-3.2 (transport-unification-v2): exclude
# ``if TYPE_CHECKING: import …`` from the import graph. Otherwise
# ``ryotenkai_providers.training.interfaces`` types-only-imports
# ``SSHClient`` for Protocol annotations and ANY runtime caller of
# the Protocol picks up that edge transitively, defeating the
# RUNTIME-only contract.
exclude_type_checking_imports = true

[[tool.importlinter.contracts]]
name = "shared has no internal deps (must be leaf)"
type = "forbidden"
source_modules = ["ryotenkai_shared"]
forbidden_modules = [
    "ryotenkai_community",
    "ryotenkai_pod",
    "ryotenkai_providers",
    "ryotenkai_control",
]

[[tool.importlinter.contracts]]
name = "community depends only on shared"
type = "forbidden"
source_modules = ["ryotenkai_community"]
forbidden_modules = [
    "ryotenkai_pod",
    "ryotenkai_providers",
    "ryotenkai_control",
]

[[tool.importlinter.contracts]]
name = "pod depends only on shared and community"
type = "forbidden"
source_modules = ["ryotenkai_pod"]
forbidden_modules = [
    "ryotenkai_providers",
    "ryotenkai_control",
]

[[tool.importlinter.contracts]]
name = "providers depend only on shared (no community, no pod, no control)"
type = "forbidden"
source_modules = ["ryotenkai_providers"]
forbidden_modules = [
    "ryotenkai_community",
    "ryotenkai_pod",
    "ryotenkai_control",
]

[[tool.importlinter.contracts]]
name = "control must not import pod (Mac vs in-pod boundary)"
type = "forbidden"
source_modules = ["ryotenkai_control"]
forbidden_modules = ["ryotenkai_pod"]

[[tool.importlinter.contracts]]
name = "trainer subpackage must not import runner subpackage"
type = "forbidden"
source_modules = ["ryotenkai_pod.trainer"]
forbidden_modules = ["ryotenkai_pod.runner"]

[[tool.importlinter.contracts]]
name = "runner subpackage must not import trainer subpackage"
type = "forbidden"
source_modules = ["ryotenkai_pod.runner"]
forbidden_modules = ["ryotenkai_pod.trainer"]

# ----------------------------------------------------------------------
# Transport-unification-v2 (Phase 3 PR-3.2): SSHClient import boundary.
#
# After Phase 2 added the runtime HTTP endpoints (/diagnostics,
# /resources, /logs, /files/upload, /runtime/import-check) the
# Mac-side runtime path no longer needs SSH. Bootstrap modules
# (runner_launcher, code_syncer, dependency_installer, file_uploader,
# connection_test) AND pod→Mac data-pull modules (hf_uploader,
# metrics_buffer_retriever) are out of scope per plan §10 — see
# docs/architecture/SSH_SURFACE.md for the canonical allowlist.
#
# This contract forbids ssh_client imports from the RUNTIME-only
# modules that have been migrated to HTTP. Adding more runtime
# modules to ``source_modules`` as future migrations land tightens
# the boundary one notch at a time.
#
# RP13 mitigation companion: this contract catches imports;
# packages/control/tests/sentinel/test_no_runtime_ssh_exec_command.py
# catches runtime call expressions importlinter cannot see.
[[tool.importlinter.contracts]]
name = "runtime-only modules must not import SSHClient"
type = "forbidden"
source_modules = [
    "ryotenkai_control.pipeline.stages.training_monitor",
]
forbidden_modules = ["ryotenkai_shared.utils.ssh_client"]

# ----------------------------------------------------------------------
# Engine plugin system (ADR purring-sleeping-hartmanis, PR-1):
# ``packages/engines/`` is the new home of engine runtimes (vLLM, SGLang,
# …). Engines is a leaf workspace member: depends only on stdlib +
# pydantic + ryotenkai_shared (Result/AppError types). NEVER on
# providers/control/pod/community — the dependency direction is providers
# → engines, never engines → providers.
[[tool.importlinter.contracts]]
name = "engines is a leaf (depends only on shared)"
type = "forbidden"
source_modules = ["ryotenkai_engines"]
forbidden_modules = [
    "ryotenkai_community",
    "ryotenkai_pod",
    "ryotenkai_providers",
    "ryotenkai_control",
]

# Generic code (providers + control) must talk to engines via the public
# Protocol/registry surface — never import a concrete engine
# implementation (e.g. ``ryotenkai_engines.vllm.runtime``). Engines are
# resolved through ``EngineRegistry.get_runtime(kind)``; direct imports
# would defeat the abstraction and re-introduce the leak the plan removes.
[[tool.importlinter.contracts]]
name = "generic code must not import concrete engine modules"
type = "forbidden"
source_modules = [
    "ryotenkai_providers",
    "ryotenkai_control",
]
forbidden_modules = [
    "ryotenkai_engines.vllm",
]
